<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Booxs</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_see_list">List</string>
    <string name="action_see_grid">Grid</string>
    <string name="action_see_as">See as...</string>
    <string name="action_see_order">Order by...</string>
    <string name="action_order_name">Order by name</string>
    <string name="action_order_date">Order by date</string>

</resources>
